fixed more tabs tab on IE

--- a/static/styles/screen/main.2.css
+++ b/static/styles/screen/main.2.css
@@ -526,8 +526,8 @@ body.flatpage #left-panel{
 
 	#page-content{
 		display:inline-block;
-		position: relative;
-	    /*padding-left:40px;*/
+		position: absolute;
+		left:90px;
 	    border-left:1px solid #ccc;
 	    width:100%;
 	}
@@ -613,6 +613,7 @@ body.flatpage #left-panel{
 			display:inline;
 			margin-top:6px;
 		}
+
 		#stunable-tabs-nav .click-show{
 			cursor: pointer;
 			height:65px;
@@ -623,10 +624,17 @@ body.flatpage #left-panel{
 			display:inline-block;
 			padding-right:8px;
 			padding-left:8px;
-			background-color:whitesmoke;
+			
 			/*box-shadow: -3px 6px 6px 3px rgba(0,0,0,.1);*/
 
 		}
+
+		#stunable-tabs-nav li#more-tabs-tab{
+			background-color:whitesmoke;
+		}
+
+		#stunable-tabs-nav li#more-tabs-tab div{
+			display: inline;		}
 
 		#tab-adder{
 			font-size:.8em;
